[package]
name = "furtherance"
version = "1.8.2"
description = "Track your time without being tracked."
authors = ["Ricky Kresslein <ricky@unobserved.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["unstable-locales"] }
chrono_locale = "0.1"
csv = "1.2"
dbus = "0.9.7"
dbus-codegen = "0.10.0"
directories = "5.0"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk4-macros = "0.7.2"
itertools = "0.10.5"
log = "0.4"
num-derive = "0.3.3"
num-traits = "0.2.15"
once_cell = "1.17.1"
rusqlite = { version = "0.28.0", features = ["backup"] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.gtk]
package = "gtk4"
version = "0.7.3"

[dependencies.adw]
package = "libadwaita"
version = "0.5.3"
features = ["v1_2"]

[build-dependencies]
glib-build-tools = "0.18.0"

[package.metadata.bundle]
name = "Furtherance"
identifier = "com.lakoliu.Furtherance"
icon = [
#    "32x32.png",
#    "128x128.png",
#    "128x128@2x.png"
    "data/icons/pngs/64x64.png",
    "data/icons/pngs/128x128.png",
    "data/icons/pngs/256x256.png"
]
#version = "1.0.0"
resources = ["assets", "images/**/*.png", "secrets/public_key.txt"]
copyright = "Copyright (c) Jane Doe 2016. All rights reserved."
category = "Utility"
short_description = "Track your time without being tracked."
long_description = """
Track your time without being tracked.
"""
deb_depends = [
    "glib-2.0 (>= 2.66)",
    "gio-2.0 (>= 2.66)",
    "gtk4 (>= 4.0.0)",
    "libadwaita-1 (>=1.0.0)"
]
#osx_frameworks = ["SDL2"]
#osx_url_schemes = []
